--- a/OperatingSystems/6. Process Synchronization.md
+++ b/OperatingSystems/6. Process Synchronization.md
@@ -1,85 +1,547 @@
 # 6. Process Synchronization
 
+프로세스 동기화 - 하나의 **자원**을 한 순간에 하나의 프로세스만이 이용하도록 제어하는 것
+
+- `공유 데이터의 동시 접근(concurrent access)`은 **데이터의 불일치(inconsistency) 문제**를 발생시킬 수 있다.
+- 일관성 유지를 위해서는 **협력 프로세스(cooperating process) 간의 `실행 순서(orderly execution)`를 정해주는 메커니즘**이 필요하다.
+- Race condition
+    - 여러 프로세스들이 동시에 `공유 데이터`를 접근하는 상황
+    - 데이터의 최종 연산 결과는 **마지막에 그 데이터를 다룬 프로세스에 따라 달라짐**
+- race condition을 막기 위해서는 동시에 접근하는 프로세스 간의 `동기화`가 되어야 한다.
+
 # 데이터의 접근
 
-s-box, e-box는 정식용어가 아닌, 가제임.
+컴퓨터 시스템 내에서 데이터가 접근되는 패턴
 
-다만 s-box(storage box), e-box(execution box)
+- 컴퓨터 시스템의 어떤 위치에 있던 간에 **데이터를 접근하는 경로**는 아래와 같다.
 
-# Race condition
+
+*Execution-Box와 Storage-Box는 통상적으로 쓰는 용어가 아니라 교수님이 이름 붙인 것*
+
+- 예 (1), (2)는 HW 관점
+- 예 (3)은 SW 관점
+
+데이터를 단순히 읽기만 하면 문제가 없다.
+
+그러나 데이터를 읽고, 연산을 하고, 다시 결과를 저장하는 방식의 시스템에서는 누가(어떤 E-Box가) 먼저 읽었느냐에 따라 결과가 달라질 수 있다.
+
+=> 이러한 문제를 `Synchronization 문제`라고 한다.
+
+s-box(storage box): 데이터가 저장된 위치
+
+- Memory
+- Address space
+- 디스크
+
+e-box(execution box): 데이터를 연산하는 위치
+
+- CPU
+- 컴퓨터 내부
+- 프로세스
+
+# Race condition(경쟁 상태)
+
+여러 프로세스들이 동시에 공유 데이터를 접근하는 상황
+
+데이터의 최종 연산 결과는 마지막에 그 데이터를 다룬 프로세스에 따라 달라짐
+
+Storage-Box를 하나의 Execution-Box만이 사용한다고 하면 문제가 발생하지 않는다.
 
 s-box를 공유하는 e-box가 여럿 여럿 있는 경우 race condition의 가능성이 있음.
 
 case1 - multiprocessor system
 
+- 여러 CPU가 하나의 메모리를 공유하는 경우
+
 case2 - shared memory
+
+case3 - 커널의 공유 데이터에 여러 프로세스가 접근
 
 ### OS에서 race condition은 언제 발생하는가?
 
-1. kernel cpu 실행중 인터럽트 발생 시
+보통 프로세스는 자신의 주소 공간에만 접근할 수 있으므로 race condition이 거의 발생하지 않고, 공유 가능한 **커널 공간**에서 발생한다.
 
-    해결책 - 작업동안 interreupt를 처리하지 않음
+1. 인터럽트 핸들러 vs 커널
+    - `커널모드`에서 실행 중에 **인터럽트**가 발생하여 `인터럽트 처리루틴`이 수행된다.
 
-2. process가 system call을 하여 kernel mode로 수행중인데 context switch가 일어나는 경우
+        => `커널모드`와 `인터럽트 처리루틴` 모두 **커널 코드**이므로 **kernel address space를 공유**한다.
 
-    해결책 - kernel mode 에서 cpu를 빼앗지 않도록 해서 해결
+    : CPU에서 커널을 실행하다가 **커널 데이터인 count**를 1 증가시키는 코드를 수행하려고 한다.
 
-3. multiprocessor에서 shared memory 내의 kernel data
+    이때 고급 언어의 count++ 문장은 CPU 내부에서 여러 개의 인스트럭션을 통해 실행된다.
 
-    해결책1 - kernel lock
-    해결책2 - kernel shared data lock
+    - Load: 메모리에서 레지스터로 데이터를 읽어들임
+    - Inc: 레지스터에 저장된 값 1 증가
+    - Store: 레지스터 값을 메모리에 저장
+
+        ```c
+        load    X, reg1
+        inc     reg1
+        store   X, reg1
+        ```
+
+    Load까지만 수행했는데 `인터럽트`가 들어오면 해당 프로세스의 수행을 멈추고, 인터럽트 핸들러(커널 코드)가 실행된다.
+
+    인터럽트 핸들러는 커널 코드이므로 **커널 데이터인 count**를 1 감소시킬 수 있다.
+
+    인터럽트 처리가 끝나고 이전 프로세스의 커널모드로 다시 돌아오면, count를 1 감소시키기 이전의 값을 레지스터에 이미 읽어온 상태이므로 count--는 최종 결과에 반영되지 않는다.
+
+    - 해결법
+
+        : enable/disable interrupt
+
+        => 커널 수행 중에는 인터럽트를 disable 시키고, 작업이 끝난 후 인터럽트 처리 루틴으로 제어를 넘긴다.
+
+        **즉, 데이터를 접근하는 순서를 정해주면 된다.**
+
+2. 프로세스가 시스템 콜을 하여 `커널모드`로 수행 중인데 `문맥 교환`이 발생한 경우(time sharing system)
+
+    사용자모드에서 문맥 교환이 일어난 경우는 race condition이 발생하지 않는다.
+
+    - 시스템 콜 중에는 kernel address space의 데이터를 공유하게 된다.
+
+    : CPU에서 커널을 실행하다가 **커널 데이터인 count**를 1 증가시키는 코드를 수행하려고 한다.
+
+    Load까지만 수행했는데 `문맥 교환`이 발생하면 해당 프로세스의 수행을 멈추고, 다른 프로세스에게 제어가 넘어간다. (타이머 인터럽트)
+
+    이때 새로운 프로세스에서 **시스템 콜**을 하여 커널에서 또 **커널 데이터인 count**를 1 감소시켰다.
+
+    다시 원래 프로세스로 돌아오면 count를 1 감소시키기 이전의 값을 레지스터에 이미 읽어온 상태이므로 count--는 최종 결과에 반영되지 않는다.
+
+    해당 시점의 context를 가지고 count++의 나머지 인스트럭션을 수행하므로 최종적으로 count는 1만 증가한다.
+
+    - 해결법
+
+        : enable/disable interrupt (여기서는 타이머 인터럽트)
+
+        프로세스가 `커널모드`에 있을 때는 **할당 시간이 끝나도 CPU를 빼앗지 않는다.**
+
+        `커널모드`에서 `사용자모드`로 돌아갈 때 CPU를 빼앗는다.
+
+        - 할당 시간이 정확하게 지켜지지 않을 수 있지만 time sharing system은 real time system이 아니므로 시스템에 큰 문제가 발생하지 않는다.
+3. 멀티프로세서 환경
+    - 앞의 두 예시와 달리, `공유 데이터`를 사용하는 작업이 진행되는 동안 interrupt enable/disable하는 방식으로 해결되지 않는다.
+
+        앞의 예시들은 **CPU가 하나**인데 작업 도중에 그 CPU의 제어권이 넘어가서 생긴 문제이다.
+
+    - 반면에, 멀티프로세서 시스템은 근본적으로 작업 주체가 여러개 있기 때문에 발생하는 문제이다.
+
+        이 경우 역시 사용자 프로세스 주소 공간에서는 race condition이 발생하지 않는다.
+
+    - 해결법:
+        1. 한 순간에 하나의 CPU만이 커널에 들어갈 수 있게 하는 방법
+            - 비효율적
+        2. 커널 내부에 있는 각 공유 데이터에 접근할 때마다 그 공유 데이터에 대한 lock/unlock을 하는 방법
+
+            : 각 데이터 별로 lock을 둔다.
+
+            - 여러 CPU가 동시에 커널 코드를 실행할 수 있으므로 효율적이다.
 
 Critical section이란?
-공유데이터를 접근하는 code
+공유데이터에 접근하는 **code**
+ex) x = x + 1;
+      x = x - 1;
+각 프로세스의 code 영역에는 공유 데이터를 접근하는 코드인 critical section이 존재한다.
 
-## 프로그램적 해결법의 충족 조건
+## **임계 구역(The Critical-Section Problem)**
 
-`mutual exclusion`
+**enable/disable interrupt 방식이 아닌 각 `공유 데이터`별로 lock을 거는 방식을 사용한다.**
 
-어떤 프로세스가 critical section 부분을 수행중이면 다른 모든 processes는 critical section에 들어가면 안됨.
+아래의 예제들이 커널코드라고 가정하면 작업이 완료될 때까지 interrupt가 걸리지 않으므로 lock을 걸 필요가 없다.
 
-`progress`
+그런데 lock 알고리즘과 세마포어의 예제 코드는 도중에 interrupt가 걸려 다른 프로세스에게 제어권이 넘어가는 상황을 상정한다.
 
-아무도 critical section에 있지 않은 상태에서 critical section에 들어가고자 하는 process가 있으면 critical  section에 들어가게 해주어야 함.
+=> 즉 프로그래머가 **공유 메모리를 사용하는 프로그램**을 작성할 때 고려해야 할 여러가지 사항들을 설명하고 있다.
 
-`bounded waiting`
+*`멀티프로세서` 시스템에서는 **커널**을 작성할 때도 공유 데이터에 대한 lock을 거는 방식을 사용한다.
 
-특정 process 입장에서 critical section에 못들어가고 지나치게 오래 기다리는 starvation이 생기지 않아야 함.
+여기서부터는 운영체제(커널)의 원리가 아니라, 시분할 시스템 운영체제 위에서 프로그래밍 하는 방법을 설명하고 있다. **(싱글 프로세서 환경)**
+  - **세마포어**와 **모니터**는 process synchronization 문제를 프로그래머 입장에서 쉽게 해결할 수 있도록 시스템이 제공해주는 것이다.
 
-## Algorithm
+n개의 프로세스(공유 메모리 사용 프로세스)가 `공유 데이터`를 동시에 사용하기를 원하는 경우, 각 프로세스의 **코드 영역**에는 **공유 데이터를 접근하는 `코드`인 critical section**이 존재한다.
 
-1.
+하나의 프로세스가 critical section에 있을 때, 다른 모든 프로세스는 critical section에 들어갈 수 없어야 한다.
 
-2. flag 방식
+- ex) 두 프로세스 P1과 P2의 `공유 데이터`가 X = 2라면,
 
-3. peterson's algorithm(flag & turn방식)
+    P1의 X = X + 1; 코드가 임계 구역으로, 이 코드를 실행하는 도중에 제어가 P2로 넘어가면
 
-busy waiting(=spin lock) 발생
+    P2의 X = X - 1; 코드가 임계 구역이라서 이 코드를 실행하지 못하고 기다려야 한다.
 
-## synchronization hardware
+임계 구역 관점에서 코드는 두 종류로 구분할 수 있다.
 
-하드웨어적으로 test& modify를 atomic하게 수행할 수 있도록 지원하는 경우 문제가 간단히 해결됨
+```c
+do{
+	entry section    // lock 코드
+	critical section 
+	exit section     // lock 해제 코드
+	remainder section
+} while(1);
+```
 
-보통 test_and_set()
+1. 임계 구역, 즉 공유 데이터를 접근하는 코드(critical section)
 
-즉 인스트럭션 하나에 읽고 쓰는작업 모두 실행하는 하드웨어적 지원.
+    : entry section과 exit section 코드로 감싸고, 이 코드들을 이용하여 **lock**을 걸거나 풀어준다.
+
+2. 공유 데이터를 접근하지 않는 코드(remainder section)
+
+프로세스들은 수행의 `동기화(synchronize)`를 위해 몇몇 **변수를 공유**할 수 있다.
+**=> synchronization variable**
+
+SW적으로 **lock**을 걸어서 해결하는 알고리즘들이 있다.
+
+이 `SW적인 lock 알고리즘`들이 critical section 문제를 해결하기 위해 만족해야 할 조건이 3가지 있다.
+
+따라서 임계구역(critical section) 문제를 해결하는 것은 **entry section과 exit section 코드를 이용해서 다음 조건들을 만족시키는 것이 목적**이다.
+
+`mutual exclusion(상호 배제)`
+
+어떤 프로세스가 critical section 부분을 수행중이면 다른 모든 process는 critical section에 들어가면 안됨.
+
+`progress(진행)`
+
+아무도 critical section에 있지 않은 상태에서 critical section에 들어가고자 하는 process가 있으면 critical section에 들어가게 해주어야 함.
+
+당연한 이야기 같지만, 이 조건이 만족 안 될 수가 있다.
+
+코드를 잘못 짜면 둘이 동시에 들어가는 것을 막고자 하다가 둘 다 못 들어가는 상황이 발생할 수도 있다. 
+
+`bounded waiting(유한 대기)`
+
+프로세스가 critical section에 들어가려고 요청한 후부터 그 요청이 허용될 때까지 다른 프로세스들이 critical section에 들어가는 횟수에 한계가 있어야 한다.
+
+즉, **특정 process 입장에서** critical section에 못들어가고 지나치게 오래 기다리는 starvation이 생기지 않아야 함.
+
+가정
+
+- 모든 프로세스의 수행 속도는 0보다 크다.
+- 프로세스들 간의 상대적인 수행 속도는 가정하지 않는다.
+
+## Algorithm(SW적인 lock 알고리즘)
+
+프로그래머가 시스템의 커널을 작성할 때나, 시스템의 공유메모리를 사용하는 프로그램을 작성할 때 `synchronization 문제`를 고려하여 작성해야 한다.
+
+이때 다음과 같은 알고리즘들이 고려된다.
+
+### **1) 순서 정하기**
+
+`turn 변수`를 이용한다.
+
+CPU를 빼앗기지 않고 **고급 언어의 critical section**을 모두 수행한 후에 CPU를 넘겨줌으로써 `critical section 문제`를 해결하려고 한다.
+
+- Synchronization variable
+
+    ```c
+    int turn;
+    turn = 0;   // 초기화) Pi는 turn == i일 때 임계구역 진입 가능
+    ```
+
+- Process P0
+
+    ```c
+    do{
+        while(turn != 0);   // 내 차례가 될 때까지 기다림(P1이 turn = 0으로 바꿔줄 때까지)
+        critical section
+        turn = 1;           // P1에게 차례를 넘겨줌
+        remainder section
+    }while(1);
+    ```
+
+- Process P1
+
+    ```c
+    do{
+        while(turn != 1);   // 내 차례가 될 때까지 기다림(P0이 turn = 1으로 바꿔줄 때까지)
+        critical section
+        turn = 0;           // P0에게 차례를 넘겨줌
+        remainder section
+    }while(1);
+    ```
+
+- turn을 번갈아 갖기 때문에 `mutual exclusion`은 만족하지만, `progress`는 만족하지 않는다.
+    - 과잉양보
+
+        : 반드시 한번씩 교대로 들어가야만 하도록 코딩되어 있다. **(swap-turn)**
+
+        즉, 상대방 프로세스가 critical section을 진입하고 나온 뒤에, turn을 내 차례에 해당하는 값으로 바꿔줘야만 들어갈 수 있다.
+
+        이때, 특정 프로세스가 다른 프로세스에 비해 더 빈번히 critical section에 진입해야 한다면, 상대방이 turn을 바꿔주기 전까지 들어가지 못하고 기다려야 한다.
+
+    => 따라서 `critical section 문제`를 해결하지 못한다.
+
+### **2) flag(깃발)**
+
+`flag`는 깃발을 들어서 본인이 critical section에 들어가고자 한다는 의사를 표시하는 것이다.
+
+깃발을 들은 후에는 상대방도 깃발을 들었는지 확인한다.
+
+=> "이미 들어갔을 수도 있겠구나" 생각하고 기다림 (진짜로 들어갔는지 아닌지는 모른다!)
+
+- Synchronization variable
+
+    ```c
+    boolean flag[2];      // 참고) c 표준은 bool형 변수가 없다.
+    flag[모두] = fasle;   // 초기화) 둘 다 임계구역에 들어가고자 하는 상태는 아님
+    // Pi가 임계구역에 들어가려면 먼저 flag를 true로 만들어서 의사 표시를 한다.
+    flag[i] = true;
+    ```
+
+- Process Pi
+
+    ```c
+    do{
+        flag[i] = true; // Pi가 임계구역에 들어가려면 먼저 flag를 true로 만들어서 의사 표시를 한다.
+        while(flag[j]); // 상대방이 flag를 체크했으면, 상대방이 flag를 체크한 후 임계구역에 '들어갔을 수도' 있으므로 기다린다.
+        critical section
+        flag[i] = false; // 상대방이 들어올 수 있게 flag 해제
+        remainder section
+    }while(1);
+    ```
+
+- `mutual exclusion`은 만족하지만, `progress`는 만족하지 않는다.
+    - 둘 다 깃발을 올리고 끊임 없이 양보하는 상황 발생 가능
+
+        : 프로세스i가 flag[i] = true; 까지 실행하고 CPU를 빼앗긴 뒤, 프로세스j에서 flag[j] = true;를 실행하고 while(flag[i]);에서 기다린다.
+
+        다시 프로세스i에게 제어권이 넘어가도 계속 while(flag[j]); 문을 실행하게 된다.
+
+        이때 둘 다 깃발을 올렸지만 아무도 critical section에 들어가지 못한다.
+
+    - 들어가기 전에 깃발을 올리고, 나온 후에 깃발을 내리기 때문에 발생하는 문제
+
+    => 따라서 `critical section 문제`를 해결하지 못한다.
+
+### **3) Peterson's Algorithm**
+
+순서를 정하는 변수 `turn`과 깃발 `flag`를 모두 사용한다.
+
+- Process Pi
+
+    ```c
+    do{
+        flag[i] = true; // 깃발을 들어 의사 표현하고,
+        turn = j;       // 상대방의 순서로 바꾼다.
+        while(flag[j] && turn == j); // 상대방이 깃발을 들고 있고, 상대방의 순서면 기다린다.
+        critical section
+        flag[i] = false;
+        remainder section
+    }while(1);
+    ```
+
+- 3가지 조건을 모두 만족한다.
+    - mutual exclusion
+
+        : critical section에 들어갈 의사가 있다면, turn에 따라 교대로 들어간다.
+
+    - progress
+
+        : critical section에 아무도 들어가 있지 않으면 turn에 관계 없이 들어갈 수 있다.
+
+    => 따라서 `critical section 문제`를 해결한다.
+
+- Busy Waiting (spin lock)
+
+    : 계속 CPU와 메모리를 쓰면서 wait
+
+    lock이 걸려있는 상태라면, 임계구역에 진입하려는 프로세스는 CPU 할당시간 동안 while문만 체크하면서(spin) 할당시간을 소진하고 끝낸다.
+
+    ⇒ 따라서 비효율적인 알고리즘이다.
+
+고급 언어가 아니라 **인스트럭션 단위**로 CPU의 제어권을 빼앗을 수 있기 때문에 SW적으로 복잡한 코드가 만들어지게 되었다.
+=> 따라서 **특수한 인스트럭션을 HW적으로 구현**하면 critical section 문제는 매우 쉽게 해결된다.
+
+## Synchronization hardware
+
+`critical section 문제`가 발생한 이유는 **데이터를 읽고 쓰는 것(Test & modify)**이 두 개 이상의 인스트럭션이 필요하기 때문이다.
+
+**데이터를 읽고 쓰는 것**을 `특수한 인스트럭션 하나`만으로 수행할 수 있다면**(atomic)**, 인스트럭션이 실행되는 도중에 CPU를 빼앗기지 않게 되므로 문제가 해결된다.
+
+- Test_and_set(a)
+    - 데이터 a는 0과 1의 값만 가진다.
+    - 이 함수는 a의 원래값을 읽어서 리턴하고, 그 다음 무조건 a = 1로 바꿔준다.(set)
+
+- Synchronization variable
+
+    ```c
+    boolean lock = false;
+    ```
+
+- Process Pi
+
+    ```c
+    do{
+        while(Test_and_Set(lock)); // critical section에 들어가기 전에 lock을 건다.
+        // lock = 0이면 lock = 1로 바꿔주고 0을 리턴하여 critical section에 들어간다.
+        // lock = 1이면 lock = 1로 바꿔주고(변화x) 1을 리턴하여 기다린다.(while문 실행)
+        critical section
+        lock = false; // 빠져나올 때 lock을 푼다.
+        remainder section
+    }while(1);
+    ```
+
+    - 다른 프로세스가 lock을 해제하면, lock = 0이 되어 critical section에 들어갈 수 있게 된다.
+
+프로그래머가 매번 이런 작업을 하는 것은 불편하다.
+따라서 **프로그래머가 더 사용하기 편한 고급 추상 자료형인 세마포어**를 제공한다.
+프로그래머는 세마포어를 이용하여 **연산만 해줘서 lock을 걸거나 해제할 수 있다**.
 
 ## Semaphores
+
+lock을 걸고 푸는 위의 SW/HW 구현 코드들은 프로그래머가 매번 신경쓰기는 어렵다.
+따라서 더 추상화된 자료형인 세마포어를 정의한다.
+⇒ 연산만 해줌으로써 lock을 걸고 풀 수 있다.
+
+`세마포어(Semaphore)`는 **앞의 방식들(lock/unlock 알고리즘)을 `추상화`시킨 것**이다.
+
+`공유자원`을 획득하고 반납하는 작업을 세마포어가 처리해준다.
+
+- 추상 자료형
+
+    : object + operation
+
+    **논리적으로 정의되는 것**. 컴퓨터에서 실제로 어떻게 구현되는지 정의하지는 않는다.
+
+    ex) 정수 추상 자료형 - 정수 숫자와 그 숫자들에 대해 정의된 연산(+,-,*,/) 집합
+
+- 세마포어
+    - 변수 S: 정수값을 갖는다.
+        - 자원의 개수라고 생각하면 된다. ex) S = 5면 자원이 5개
+    - 연산: 변수 S에 대해 두 가지 `atomic` 연산이 정의된다.
+        - 어떤 방법을 이용하여 atomic하게 구현되는지는 정의하지 않는다.
+        - P(S) 연산
+
+            : 공유데이터를 획득하는 과정. lock을 거는 과정
+
+            ```c
+            while(s <= 0) do no-op; // 자원이 없으면 wait (busy-wait!!!)
+            S--;
+            ```
+
+            - `busy wait` 문제가 발생한다.
+        - V(S) 연산
+
+            : 공유데이터를 반납하는 과정. lock을 푸는 과정
+
+            ```c
+            S++;
+            ```
+
+세마포어 변수 값이 1인 경우(= 자원이 1개) **lock/unlock 알고리즘(= mutex)**으로 활용될 수 있다.
 
 lock걸고 lock푸는, shared data 획득 반납 처리.
 
 semaphore는 P와 V가 atomic하게 실행되는것을 가정함
 
-`P(S)` 자원 획득 & Lock
+`P(S)` 공유자원 획득 & Lock
 
-`V(S)` 자원 반납 & Lock 해제
+`V(S)` 공유자원 반납 & Lock 해제
+
+### **Critical Section with Semaphore**
+
+**[세마포어의 busy-wait 구현]**
+
+- Synchronization variable
+
+    ```c
+    semaphore mutex = 1;
+    // 세마포어 변수 값이 1인 경우(= 자원이 1개) lock/unlock 알고리즘(= mutex)으로 활용될 수 있다.
+    ```
+
+- Process Pi
+
+    ```c
+    do{
+        P(mutex);
+        critical section
+        V(mutex);
+        remainder section
+    }while(1);
+    ```
+
+    - 시스템에서 세마포어를 구현하여 P, V 연산을 지원해주면 간단하게 `critical section 문제`를 해결할 수 있다.
+    - 이 방법에서도 `busy-wait(spin lock)`는 발생한다.
+
+**[세마포어의 Block & Wakeup 구현]**
+
+특별히 lock 관점에서 Block & Wakeup 방식을 `sleep lock`이라고 부른다.
+
+요청한 `공유 자원`을 얻지 못하면, 해당 프로세스를 block 시켜 CPU를 쓸데없이 할당하지 않도록 한다. 즉 자원을 얻지 못한 프로세스는 `봉쇄(blocked)` 상태가 된다.
+
+- Semaphore를 다음과 같이 정의한다.
+
+    ```c
+    typedef struct{
+        int value;  // semaphore 변수 값
+        struct process* L;  // 프로세스 wait 큐 - 세마포어 때문에 잠들어 있는 프로세스들을 연결하기 위한 큐
+    } semaphore;
+    ```
+
+- block()
+
+    : **커널**은 block()을 호출한 프로세스를 `suspend` 시킴
+
+    이 프로세스의 **PCB**를 **semaphore에 대한 wait queue**에 넣음
+
+- wakeup(P)
+
+    : block 된 프로세스 P를 `wakeup` 시킴
+
+    이 프로세스의 **PCB**를 **ready queue**로 옮김
+
+Semaphore의 구체적인 구현은 다음과 같다.
+
+- P(S) - S는 위에서 정의된 세마포어 변수
+
+    : 자원을 획득하는 과정
+
+    ```c
+    S.value--;  // S.value를 검사하기 전에 일단 감소시킨다.
+    // 자원이 있다면 if문을 건너뛰고 자원을 바로 흭득한다.
+    if(S.value < 0){ // 위에서 먼저 빼줬기 때문에 0이 아니라 음수가 '여분이 없는 상태'의 기준이다.
+        // 자원의 여분이 없다면 리스트에 이 프로세스를 연결시킨 뒤, 잠든다.
+        add this process to S.L;
+        block(); 
+    }
+    ```
+
+- V(S)
+
+    : 자원을 반납하는 과정
+
+    ```c
+    S.value++;
+    // 자원을 반납하고 끝나는 것이 아니라, 혹시 이 자원을 기다리면서 잠든 프로세스가 있다면 깨워준다.
+    if(S.value <= 0){   
+        // 이 자원을 기다리는 프로세스가 있다면 깨워준다.
+        remove a process P from S.L;
+        wakeup(P); 
+    }
+    ```
+
+    - if(S.value <= 0)
+
+        : 일단 프로세스들이 S.value 값을 빼고 잠들었으므로, 내가 지금 자원을 내놓았는데도 불구하고 그 값이 0 이하라면, 이 자원을 기다리면서 잠든 프로세스가 존재한다는 뜻이다.
+
+        (여분의 자원이 남는다면 S.value가 1 이상이어야 한다.)
+
+        - 앞에서 P연산으로 이미 S.value--;를 많이 실행해서 **S.value가 음수 값이 되어** if(s.value < 0) 문을 실행해서 **프로세스가 잠들었다는 뜻**이므로
+
+busy-waiting 방식에서는 **S는 자원의 개수를 뜻하는 변수**였다.
+block & wakeup 방식에서는 **S.value는 자원의 개수를 세는 것이 아니라**, 
+  - S.value < 0, 즉 음수이면 어떤 프로세스가 자원을 기다리며 잠들어 있다는 의미이다.
+  - S.value > 0, 즉 양수이면 기다리는 프로세스 없이 모두 자원을 쓰고 있다는 의미이다.
+=> 즉 **깨워야 할 프로세스의 존재여부를 확인할 때 사용하는, 상황을 나타내는 변수**이다.
 
 ## Busy-wait vs Block/wakeup
 
-`critical sectio 길이 vs Block/wakeup overhead`
+`critical section 길이 vs Block/wakeup overhead`
 
-- critical sectio의 길이가 긴 경우 block/wakeup이 적당
+아예 cpu를 반납하고 block(sleep) 상태에 들어가서 cpu를 할당받지 않음
+
+- critical section의 길이가 긴 경우 block/wakeup이 적당
+    - cpu 낭비시간이 줄어들기 때문
 - critical section의 길이가 매우 짧은 경우 block/wakeup overhead가 busy-wait overhaed보다 커질 수 있음
+    - 프로세스의 상태를 blocked ↔ ready 로 바꿔줘야 하므로 오버헤드가 있다.
 
 일반적으로는 block/wakeup 방식이 더 좋음
 
@@ -87,34 +549,586 @@ semaphore는 P와 V가 atomic하게 실행되는것을 가정함
 
 `counting semaphore`
 
-semaphore 변수 값이 0이나 1이 아닌 그 이상도 되는 경우.(주로 resource counting 에 사용)
+semaphore 변수 값이 0이나 1이 아닌 그 이상도 되는 경우
+
+즉 **자원의 개수가 여러개** 있어서 여분이 있으면 사용할 수 있는 경우이다.
+
+(주로 resource counting 에 사용)
 
 `binary semaphore(=mutex)`
 
-보통 lock을 걸때 1 그외에는 0 (주로 mutual exlusion [lock/unlock]에 사용)
+0 또는 1 값만 가질 수 있는 semaphore
+
+보통 lock을 걸때 1 그외에는 0 
+
+즉 **자원의 개수가 1개**인 경우이다.
+
+(주로 mutual exlusion [lock/unlock]용도에 사용)
+
+## **Deadlock and Starvation**
+
+세마포어를 사용할 때 주의해야 할 점이 있다.
 
 ## Deadlock
 
-둘 이상의 프로세스가 서로 상대방에 의해 충족될 수 있는 event를 무한히 기다리는 현상
+세마포어에서 둘 이상의 프로세스가 **서로 상대방에 의해 충족될 수 있는 event를 무한히 기다리는 현상**
 
-자원획득 순서를 명시해줌으로써 해결가능
+- ex) 어떤 작업을 하기 위해서 세마포어 S와 Q 모두를 획득해야 하는 경우
+
+    HDD A의 데이터를 HDD B로 복사하려면, 두 HDD를 먼저 획득한 후에 A에서 읽어서 B에 쓰는 작업을 할 수 있다.
+
+    즉, S와 Q는 1로 초기화된 세마포어라고 하자. (자원 여분이 하나씩밖에 없음)
+
+    ```c
+    P0	<-- CPU제어권 -->	P1
+    ==============================
+    P(S);				         P(Q);		// 각자 자원을 하나씩 차지하고
+    P(Q);			         	 P(S);		// 상대방 것을 요구한다.
+    ...				          	...
+    V(S);			         	 V(Q);		// P0는 Q까지 전부 획득한 후에야 S를 내놓을 수 있다. 
+    V(Q);				         V(S);
+    ```
+
+    - 코드의 논리적 구조에는 문제가 없어보이지만 영원히 자원을 획득할 수 없다.
+- 해결법
+
+    : **자원을 획득하는 순서를 똑같이 맞춰주면 된다.**
+
+    위의 예시에서 Q를 획득하려면 S부터 획득하도록 순서를 정하고 코딩한다.
+
+    즉 세마포어는 프로그래머가 **순서**를 유의해서 작성해야 한다!
+
+    ```c
+    P0	<-- CPU제어권 -->	P1
+    ==============================
+    P(S);			        	P(S);		
+    P(Q);			         	P(Q);
+    ...				         	...
+    V(S);			         	V(Q);	
+    V(Q);			         	V(S);
+    ```
 
 ## Starvation
 
-특정 process들만 자기들끼리 공유하면서 다른 process들이 오랫동안 자기차례가 오지못하게 하는것.
+프로세스가 `suspend`된 이유에 해당하는 **`세마포어 큐`에서 빠져나갈 수 없는 현상**.
 
-deadlock도 일종의 starvation
+`Indefinite(무기한) blocking`이라고도 부른다.
+
+- 위의 deadlock도 일종의 starvation으로 볼 수 있다.
+- 하지만 여기서 말하는 starvation은 특정 프로세스들끼리만 자원을 공유하면서 다른 프로세스는 영원히 자기 차례가 오지 않는 현상을 말한다.
+- 식사하는 철학자 문제(deadlock, starvation)
 
 # classical problems of synchronization
 
-- bounded-buffer problem
+- bounded-buffer problem (Producer-Consumer problem)
 - readers-writers problem
 - dining-philosophers problem
 
-## bounded-buffer problem
+## 1) bounded-buffer problem(유한 버퍼 문제)
 
-= producer-consumer problem
+= producer-consumer problem, 생산자-소비자 문제
 
-## readers-writers problem
+circular 형태의 유한한 크기의 버퍼가 존재한다.
+
+프로세스는 2 종류가 존재한다. 프로세스의 개수는 여러개 존재할 수 있다.
+
+1. 생산자(Producer) 프로세스
+
+    : 공유 버퍼에 데이터를 넣는 역할을 한다.
+
+2. 소비자(Consumer) 프로세스
+
+    : 공유 버퍼에서 데이터를 꺼내서 사용한다.
+
+**[Synchronization 문제]**
+
+- Shared data
+    - 공유 버퍼
+        - `생산자 프로세스`가 2개 이상 동시에 도착해서 동일한 비어있는 버퍼에 데이터를 집어넣으려고 하면 문제가 발생한다.
+        - `소비자 프로세스`가 2개 이상 동시에 도착해서 동일한 버퍼에서 데이터를 꺼내려고 하면 문제가 발생한다.
+
+        => 공유 버퍼의 **lock**이 필요하다.
+
+    - 버퍼 조작 변수
+
+        : empty buffer와 full buffer의 다음 원소 위치를 가리키는 포인터와 유사하다.
+
+        - `생산자 프로세스` 여럿이 동시에 도착했는데 empty buffer가 도중에 다 채워져서 더 이상 빈 공간이 없는 경우 문제가 발생한다.
+
+            `소비자 프로세스`가 꺼내가야만 empty buffer가 다시 생긴다.
+
+        - `소비자 프로세스` 여럿이 동시에 도착했는데 full buffer가 도중에 다 비워져서 더 이상 채워진 공간이 없는 경우 문제가 발생한다.
+
+            `생산자 프로세스`가 채워야만 full buffer가 다시 생긴다.
+
+        => 유한 버퍼(Bounded-Buffer)이기 때문에 발생하는 문제로, 자원의 개수를 세기 위해서 **세마포어**가 필요하다.
+
+- Synchronization variables
+    - mutual exclusion
+
+        : `binary semaphore` 변수가 1개 필요하다.
+
+        - shared data의 mutual exclusion(mutex, lock)을 위해
+    - resource count
+
+        : `integer semaphore` 변수가 2개 필요하다.
+
+        - 생산자 프로세스 입장에서는 empty buffer의 수 표시
+        - 소비자 프로세스 입장에서는 full buffer의 수 표시
+
+**생산자 프로세스**의 동작은 다음과 같다.
+
+1. Empty 버퍼가 있나요?
+
+    => integer semaphore
+
+    - Empty 버퍼가 없으면 `sleep lock` (Block & Wakeup 방식)
+    - `소비자 프로세스`가 empty buffer를 하나 증가시켜야 wakeup 될 수 있다.
+2. 공유데이터(이 문제에서는 공유 버퍼)에 lock을 건다.
+
+    => binary semaphore **(entry section)**
+
+3. Empty buffer에 데이터 입력 및 buffer 조작
+
+    => binary semaphore **(critical section)**
+
+4. lock을 푼다.
+
+    => binary semaphore **(exit section)**
+
+5. 자원(Full buffer)의 개수 하나 증가
+
+    => integer semaphore
+
+    - 기다리는 `소비자 프로세스`가 있다면 wakeup 시킬 수 있다.
+
+**소비자 프로세스**는 생산자 프로세스와 반대되는 동작을 한다.
+
+**[코드]**
+
+- synchronization variables
+
+    ```c
+    semaphore full = 0, empty = n, 
+    mutex = 1; // 공유 버퍼에 하나의 프로세스만 접근할 수 있게 lock을 거는 용도의 세마포어 변수
+    ```
+
+- process
+
+    - Producer process
+        - P(empty): integer semaphore
+            - 공유버퍼에 데이터를 집어넣기 전에 빈 버퍼가 있는지 확인하고, 있으면 획득한다.
+            - 빈 버퍼가 없으면 기다린다. (`sleep lock`)
+        - P(mutex): binary semaphore
+            - 버퍼 전체에 lock을 걸고, 데이터를 버퍼에 집어넣은 후, lock을 해제한다.
+        - V(full): integer semaphore
+            - `소비자 프로세스` 입장의 자원인 full을 증가시켜서 wakeup을 시킨다.
+
+            block된 소비자 프로세스가 존재하는 경우
+            생산자 프로세스 코드의 V(full); 부분까지 마쳐야, block 되었던 소비자 프로세스를 wakeup 하여 P(full); 코드를 실행할 수 있다.
+
+    - Consumer process는 반대로 구성되어 있다.
+
+## 2) readers-writers problem
+
+주로 **DB**에서 발생하는 문제이다.
+
+프로세스는 2 종류가 존재한다. 프로세스의 개수는 여러개 존재할 수 있다.
+
+1. Reader process
+
+    : DB를 읽는 프로세스
+
+2. Writer Process
+
+    : DB에 쓰는 프로세스
+
+**writer process**는 동시에 접근하면 안되므로 DB에 **lock**을 건다.
+그런데 **reader process**는 데이터를 수정하지 않으므로, 여럿이 동시에 DB에 접근해도 synchronization problem이 발생하지 않는다.
+
+- 한 프로세스가 DB에 write 중일 때 다른 프로세스가 접근하면 안된다.
+- read는 여럿이 해도 된다.
+- 해결법
+    - Writer가 DB에 접근 허가를 아직 얻지 못한 상태에서는 모든 대기중인 Reader들을 다 DB에 접근하게 해준다.
+    - Writer는 대기 중인 Reader가 하나도 없을 때 DB 접근이 허용된다.
+    - 일단 Writer가 DB에 접근 중이면 Reader들은 접근이 금지된다.
+    - Writer가 DB에서 빠져나가야지만 Reader의 접근이 허용된다.
+- Shared data
+    - DB 자체
+    - readcount
+        - 현재 DB에 접근 중인 Reader의 수
+- Synchronization variables
+    - mutex
+        - 공유 변수 readcount를 접근하는 코드(critical section)의 mutual exclusion(mutex, lock) 보장을 위해 사용
+    - db
+        - Reader와 writer가 공유 DB 자체를 올바르게 접근하게 하는 역할
+
+**[코드]**
+
+- Shared data
+
+    ```c
+    int readcount = 0; // 모든 reader process들이 변경할 수 있다.
+    DB 자체
+    ```
+
+- Synchronization variables
+
+    ```c
+    semaphore mutex = 1, db = 1; // db는 DB에 대응하는 세마포어 변수(lock)
+    ```
+
+- Process
+
+    - Writer process
+        - P(db) ~ V(db): binary semaphore
+            - `공유 데이터 DB`에 접근하기 위해 P연산으로 lock이 걸려있으면 기다리고, lock이 걸려 있지 않으면 lock을 걸고 DB에 접근해서 write 한다.
+    - Reader process
+        - P(db) ~ V(db): binary semaphore
+            - DB에 lock은 걸어야 한다. lock이 걸려있지 않으면 writer process가 와서 write 할 수 있다.
+        - P(mutex) ~ V(mutex): binary semaphore
+            - `readcount` 변수도 **공유 데이터**이기 때문에 다수의 reader process가 동시에 접근하면 `synchronization 문제`가 발생할 수 있다.
+            - 그래서 **readcount를 바꾸기 위해서**도 lock이 필요하다.
+                - readcount++;
+                - readcount--;
+        - if (readcount == 1) P(db);
+            - read 하려고 lock을 걸었다면, 다른 reader process들이 와도 같이 읽을 수 있게 해줘야 한다.
+                - 내가 최초의 reader 프로세스라면 DB에 lock을 건다.
+                - 그렇지 않으면 이미 lock이 걸려있으므로 다시 걸 필요 없다.
+        - if (readcount == 0) V(db);
+            - 내가 마지막으로 나가는 reader 프로세스라면 DB에 lock을 풀어줘야 한다.
+            - writer 프로세스들이 wakeup 될 수 있다.
+
+**Starvation**이 발생 가능하다.
+
+- writer process가 reader process들보다 약간 늦게 도착한 경우, 마지막 reader process가 빠져나가면서 DB lock을 풀어줄 때까지 오랜 시간 기다려야 한다.
+
+    또 기다리는 도중에 reader process들이 계속 도착해서 영원히 기다려야 할 수도 있다.
+
+- 해결법
+
+    : 큐에 우선순위를 둬서 지나치게 오래 기다리지 않도록 구현한다.
+
+## 3) dining-philosophers problem(식사하는 철학자 문제)
+
+철학자가 하는 일이 두 가지 있는데, 각각 5명의 철학자의 주기가 다르다.
+
+1. 생각하는 일
+2. 배고파지면 밥 먹는 일
+
+    : 밥을 먹으려면 왼쪽과 오른쪽의 젓가락을 집어야 한다.
+
+    - 젓가락은 `공유 자원`이다. 각 젓가락은 동시에 두 명이서 잡을 수 없으므로, 자원의 개수가 각각 1로 초기화 된다.
+
+**[코드]**
+
+- 이 solution의 문제점
+    - **Deadlock** 가능성이 있다.
+    - 모든 철학자가 동시에 배가 고파서 왼쪽 젓가락을 집어버린 경우, 본인이 밥을 다 먹기 전까지는 왼쪽 젓가락을 놓지 않는다.
+
+        따라서 오른쪽 젓가락은 영원히 잡을 수 없는 상황이 된다.
+
+- 해결 방안
+    1. 철학자가 밥을 먹을 때만 테이블에 앉게 한다.
+        - 4명의 철학자만이 테이블에 동시에 앉을 수 있도록 한다.
+    2. 젓가락을 두 개 모두 집을 수 있을 때에만 젓가락을 집을 수 있게 한다.
+    3. 비대칭
+        - 짝수 철학자는 왼쪽 젓가락부터 집도록 함
+        - 홀수 철학자는 오른쪽 젓가락부터 집도록 함
+
+            => 짝수 철학자와 홀수 철학자 사이의 **하나의 같은 젓가락에 우선순위**를 준다.
+
+            즉, 하나의 젓가락이 우선순위가 더 높아서 그 젓가락을 집은 후에 나머지 젓가락을 집어야 하는 **순서**가 정해진다.
+
+            Deadlock 문제의 해결법인 **자원을 획득하는 순서를 똑같이 맞춰주는 방법**을 이용한 것이다.
+
+**[2번째 해결법에 대한 코드]**
+
+젓가락을 두 개 모두 집을 수 있을 때에만 젓가락을 집을 수 있게 한다.
+
+이 코드는 **세마포어**의 원리(철학)에 맞게 잘 짜여진 코드는 아니다.
+  - 세마포어 변수는 원래 자원의 개수를 나타내고, 값을 1 이상으로 초기화 한다.
+  - semaphore self[5] = 0;
+  - 이 코드에서는 어떤 조건을 만족하면 self[i] = 1이 되도록, 즉 권한을 주도록 코딩했다.
+세마포어를 사용할 때 불편한 점이 있기 때문에 **모니터**를 이용한 코드를 나중에 살펴본다.
+
+- 먹기 전에는 pickup(i)과 putdown(i) 함수를 호출한다.
+- Shared data
+
+    ```c
+    enum {thinking, hungry, eating} state[5]; // 각 철학자 프로세스의 상태
+    젓가락
+    ```
+
+- Synchronization variables
+
+    ```c
+    // 코딩을 돕기 위해 hungry 상태를 추가했다.
+    enum {thinking, hungry, eating} state[5];
+    // 각 철학자가 젓가락 2개를 다 잡을 수 있는 상태라서 젓가락을 잡는 권한이 있는지(1), 없는지(0) 나타내는 세마포어 변수
+    semaphore self[5] = 0;
+    // state를 바꾸는 것은 자신이 아닌 다른 프로세스도 바꿀 수 있으므로 '공유 데이터'다.
+    // => 따라서 공유 데이터에 대한 동시 접근을 막기 위해 lock이 필요하다. 
+    semaphore mutex = 1;
+    ```
+
+    - 보통은 자원을 1 이상의 값으로 초기화 하는데, 이 코드는 특이하게 self를 0으로 초기화 한다.
+    - 테스트 하는 단계에서 조건에 맞으면 권한을 주는(self = 1) 방식으로 코딩했다.
+
+**철학자 프로세스**의 동작은 다음과 같다.
+
+1. pickup(i);
+    - P(mutex) ~ V(mutex): binary semaphore
+        - `공유 데이터`인 state를 수정하기 때문에 **lock**을 건다. (state[i] = hungry;)
+        - test(i);
+
+            => 철학자가 젓가락 2개를 모두 집을 수 있는 상황인지 test 한다.
+
+            - 젓가락 2개를 집을 수 있는 권한은
+                1. 왼쪽 철학자도 밥 먹고 있지 않고,
+                2. 오른쪽 철학자도 밥 먹고 있지 않으며,
+                3. 지금 내가 hugry 상태일 때 주어진다. (self[i] = 1)
+            - V(self[i]): binary semaphore
+                - 테스트 조건에 맞으면 권한을 준다.(V 연산)
+                - 테스트 조건에 맞지 않으면 if문(V연산)을 건너뛰고 나와서 P연산에서 기다리게 된다.
+    - P(self[i]): binary semaphore
+        - V연산을 하고 나왔으면, 젓가락을 얻어서 밥을 먹고 있으므로 '젓가락을 집을 수 있는 권한'을 뺏는다. (self[i] = 0)
+        - V연산을 하지 않고 나왔으면, 인접한 철학자 프로세스가 밥을 다 먹고 젓가락을 내려놓을 때까지 기다린다.
+2. eat();
+
+    : 젓가락 두 개를 집었으므로 먹는다.
+
+3. putdown(i);
+
+    : 젓가락을 내려놓는다.
+
+    - P(mutex) ~ V(mutex)
+        - `공유 데이터`인 state를 수정하기 때문에 **lock**을 건다. (state[i] = thinking;)
+        - test((i+4) % 5);
+
+            test((i+1) % 5);
+
+            => 왼쪽 철학자와 오른쪽 철학자의 상태를 test한다.
+
+            왼쪽 철학자가 배가 고픈데 젓가락을 못 집고 있는 상황이면
+
+            1. 그 철학자의 왼쪽 철학자도 밥 먹고 있지 않고,
+            2. 그 철학자의 오른쪽 철학자도 밥 먹고 있지 않으며, (thinking 상태이므로 만족)
+            3. 그 철학자가 hugry 상태일 때 권한이 주어진다.
+                - 왼쪽 철학자가 `P연산`을 하여 self[i] = 1로 만들 수 있다.
+4. think();
+
+## **모니터**
+
+세마포어는 동기화 할 수 있는 방법(P 연산, V 연산)을 프로그래머에게 알려주고, 그 연산을 이용해서 작성된 프로그램을 동기화 하는 개념이다. 하지만 프로그래머가 실수를 하게 되면 동기화가 깨지는 단점이 있다.
+
+모니터는 **프로그래밍 언어 차원에서** `동시 접근과 관련된 문제`를 자동으로 해결해줌으로써 프로그래머의 부담을 줄여준다.
+
+ex) Java의 스레드
+
+- Semaphore의 문제점
+    - 코딩하기 힘들다.
+    - 정확성(correctness)의 입증이 어렵다. 즉 실수로 인한 버그가 생기기 쉽다.
+    - 자발적 협력(voluntary cooperation)이 필요하다.
+    - 한번의 실수가 모든 시스템에 치명적 영향
+- 예)
+  
+    1. P 연산과 V 연산의 순서를 바꿔서 코딩
+    2. P 연산 후에 또 P 연산을 하도록 코딩
+
+**[모니터]**
+
+따라서 **모니터**라는 개념을 `synchronization`을 위해 제공한다.
+
+모니터는 동시 수행중인 프로세스 사이에서 **`추상 자료형(abstract data type)`의 안전한 공유**를 보장하기 위한 **high-level synchronization construct**이다.
+
+=> 추상 자료형1 = 공유 데이터 + 공유 데이터에 대한 프로시저(연산)
+
+추상 자료형2 = condition variable + condition variable에 대한 연산
+
+즉, 프로그래밍 언어 차원에서 `synchronization 문제`를 해결하는 **synchronization construct(동기화 구조체)**이다.
+
+- `추상 구조체`이므로 언어마다 구현이 다르다.
+    - 모니터는 주로 **객체지향 프로그래밍**에서 지원된다.
+
+        : object + operation
+
+        모니터 내부의 프로시저를 통해서만 `공유 데이터`에 접근할 수 있다. (초기화 함수 포함)
+
+    ```c
+    monitor monitor-name{
+        shared variable 선언(= 공유 데이터)
+        procedure body P1(...){
+            ...
+        }
+        procedure body P2(...){
+            ...
+        }
+        procedure body Pn(...){
+            ...
+        }
+        {
+            initialization code
+        }
+    }
+    ```
+
+모니터는 원천적으로 모니터 내부에 있는 프로시저가 동시에 여러 개가 실행되지 않도록 만들어졌다.
+
+- 프로그래머가 동기화 제약 조건을 명시적으로 코딩할 필요 없음
+
+    즉, 프로그래머 입장에서는 세마포어처럼 lock을 걸 필요가 없이 프로시저를 이용하여 모니터에 있는 공유 데이터에 접근하면 된다.
+
+모니터 내에서는 한 번에 하나의 프로세스만이 `활동 가능`하다. 그러한 프로세스의 상태를 `active` 상태라고 한다.
+
+하나의 `active` 프로세스만이 모니터를 실행할 수 있다.
+
+- 모니터 코드를 실행하다가 **context switch**가 발생하면, 여전히 해당 프로세스는 `active` 상태로 모니터 내부에 남아있다.
+
+    따라서 다른 프로세스들은 모니터 안에 있는 코드를 실행하지 못하고 모니터 밖의 큐에서 대기한다.
+
+    모니터는 해당 구조체에 active process가 있을 때 다른 프로세스가 접근하지 못하지만, 모니터 코드 실행 도중에 **context switch(타이머 인터럽트 포함)**가 발생할 수 있으므로 **enable/disable interrupt 방식은 아니다**.
+
+- active 프로세스 = 1(true)일 때, 나머지 프로세스는 **entry queue**에서 기다리도록 한다.
+- active 프로세스 = 0(false)이 될 때, 다음 프로세스 1개 진입 가능
+    - `active` -> `terminated` 상태로 변환(모니터 빠져나감)
+    - `active` -> `sleep` 상태로 변환(조건 충족x)
+        - 유한 버퍼 문제를 예시로 들면, consume() 프로시저를 너무 많이 호출해서 자원의 여분이 없을 경우
+        - 이 때는 모니터 밖의 entry queue가 아닌, 모니터 내부의 condition queue</u>에서 기다린다.
+
+**[condition variable]**
+
+프로그래머는 모니터를 사용함으로써 세마포어 연산(P, V)의 기능 중 **lock을 거는 기능**은 명시해줄 필요가 없지만, 세마포어 연산의 **자원의 개수를 세는 기능**은 명시해줘야 한다.
+  - 자원의 개수를 세어서 자원이 있으면 접근 가능하게 함
+  - 자원이 없으면 기다리게 함
+**=> condition variable**
+
+프로세스가 모니터 안에서 기다릴 수 있도록 하기 위해 **condition variable**을 사용한다.
+
+- condition queue
+
+`condition variable`은 세마포어 변수처럼 자원의 개수를 세거나 값을 가지는 변수가 아니라, **어떤 프로세스를 잠들게 하고 줄 세우게 하기 위한 변수**다.
+
+```c
+// 자원 x의 여분이 있으면 접근할 수 있게 하고, 여분이 없으면 '모니터 내부에서' 줄 서서 기다리게 한다.
+condition x, y;
+```
+
+- condition variable은 `wait 연산`과 `signal 연산`에 의해서만 접근 가능
+    - x.wait()
+
+        : x.wiat()을 실행한 프로세스는 **다른 프로세스가 x.signal()을 invoke하기 전까지 `suspend` 된다**.
+
+    - x.signal()
+
+        : x.signal()은 정확하게 **1개**의 `suspend` 된 프로세스를 `resume` 한다.
+
+        `suspend` 된 프로세스가 없으면 아무 일도 일어나지 않는다.
+
+### **1) 유한 버퍼 문제(Bounded-Buffer Problem)**
+- Shared data
+
+    ```c
+    int buffer[N];
+    ```
+
+    - `공유 버퍼`가 모니터 내부에 정의된다.
+    - 모니터 내부 코드를 실행해야 하므로, 여러 개의 생산자 프로세스 또는 소비자 프로세스 중 하나의 프로세스만 실행된다.
+        - 생산자 프로세스가 실행 중일 때, 생산자 프로세스는 물론 소비자 프로세스도 실행될 수 없다.
+    - 따라서 버퍼 접근 코드 전, 후로 lock을 거는 작업이 없다.
+- Condition variable
+
+    ```c
+    condition full, empty;
+    ```
+
+**생산자 프로세스**의 동작은 다음과 같다.
+
+1. Empty 버퍼가 있나요? (`if문`)
+    - empty buffer가 없다면 empty.wait()으로 줄 서서 `blocked(sleep)` 상태가 된다.
+        - 나중에 소비자 프로세스가 empty.signal()을 실행하여 empty buffer가 생기면, **empty buffer 큐의 생산자 프로세스**가 순서대로 하나씩 `active`가 된다.
+    - empty buffer가 있다면 `if문` 코드 생략
+2. Empty buffer에 데이터 입력 및 buffer 조작
+    - 세마포어와 달리 전, 후로 lock을 거는 단계가 생략된다.
+3. 자원(Full buffer)의 개수 하나 증가
+    - full.signal()로 full buffer가 없어서 잠든 소비자 프로세스를 깨워준다.
+        - full buffer가 생기면 **full 큐의 소비자 프로세스**가 순서대로 하나씩 `active` 상태가 된다.
+
+**소비자 프로세스**의 동작은 반대이다.
+
+모니터의 코드가 세마포어의 코드보다 프로그래밍 관점에서 더 자연스럽다.
+  - 모니터가 동시접근을 차단하고
+  - 특정 조건을 만족하지 못하면 큐에 줄 세운다.
+세마포어는 if문 없이 **조건 체크**와 **resource counting(+대기큐 관리)**을 P, V 연산으로만 코딩하는데, 프로그램 관점에서 정확히 무슨 일을 하는지 직관적으로 파악하기 어렵다.
+모니터는 고급 언어의 if문을 사용하여 조건을 체크하고 wait, signal 연산으로 **resource counting(+대기큐 관리)**을 하므로 더 직관적인 코드를 갖는다.
+
+세마포어 버전의 코드와 모니터 버전의 코드는 서로 쉽게 변환될 수 있다.
+
+- `공유 데이터`를 접근할 때 lock/unlock 코드 <-> lock/unlock 코드 사용 안함
+- `공유 자원`의 개수를 세는 세마포어 변수 <-> 프로세스를 잠들게하거나 깨우는 condition 변수
+- 조건을 만족시키지 못하면(`if문` 없이 조건체크는 P, V 연산 내부에서 한다) 잠드는 P 연산, 프로세스를 깨우는 V 연산
+
+    <-> 조건을 만족시키지 못하면(`if문`) 잠드는 condition 변수의 wait 연산, 프로세스를 깨우는 signal 연산
+
+    - P, V 연산은 '세마포어 변수의 값'을 증가시키거나 감소시킨다.
+    - wait, signal 연산은 컨디션 변수의 값을 증가시키거나 감소시키지 않는다. 내부 구현은 정의되지 않았지만 컨디션 변수 자체로는 정수값을 갖지 않도록 정의되었다.(내부적으로는 자원의 개수를 counting하지 않을까?)
+
+### **2) 식사하는 철학자 문제(Dining-Philosophers Problem)**
+
+*세마포어와의 차이점은 1) lock 연산을 하지 않는다. 2) 잠들 때 if문으로 체크한다. 두 가지이다.*
+
+- Shared data
+
+    ```c
+    enum {thinking, hungry, eating} state[5]; // 각 철학자 프로세스의 상태
+    젓가락
+    ```
+
+- Condition variable
+
+    ```c
+    // 각 철학자가 젓가락 2개를 다 잡을 수 있는 상태라서 젓가락을 잡는 권한이 있는지, 없는지
+    condition self[5]; 
+    ```
+
+**철학자 프로세스**의 동작은 다음과 같다.
+
+1. pickup(i);
+    - `공유 데이터`인 state를 수정하는데 **lock**을 걸 필요 없다. (state[i] = hungry;)
+    - test(i);
+
+        => 철학자가 젓가락 2개를 모두 집을 수 있는 상황인지 test 한다.
+
+        - 젓가락 2개를 집을 수 있는 권한은
+            1. 왼쪽 철학자도 밥 먹고 있지 않고,
+            2. 오른쪽 철학자도 밥 먹고 있지 않으며,
+            3. 지금 내가 hugry 상태일 때 주어진다.
+        - self[i].signal()
+            - 잠들어 있는 프로세스를 깨우는데, 현재 test를 실행하고 있는 이 프로세스는 이미 `active` 상태이기 때문에 무시한다.
+    - 세마포어의 V연산과 달리 `if문`으로 state[i]의 상태를 파악한다.
+        - state[i] == eating이면 조건(젓가락 2개를 집을 수 있는 권한)을 만족했으므로 `if문`을 무시하고
+        - state[i] != eating이면 조건을 만족하지 못 했으므로 self[i].wait()으로 잠든다.
+2. eat();
+
+    : 젓가락 두 개를 집었으므로 먹는다.
+
+3. putdown(i);
+
+    : 젓가락을 내려놓는다.
+
+    - `공유 데이터`인 state를 수정하는데 **lock**을 걸 필요 없다. (state[i] = thinking;)
+    - test((i+4) % 5);
+
+        test((i+1) % 5);
+
+        => 왼쪽 철학자와 오른쪽 철학자의 상태를 test한다.
+
+        왼쪽 철학자가 배가 고픈데 젓가락을 못 집고 있는 상황이면
+
+        1. 그 철학자의 왼쪽 철학자도 밥 먹고 있지 않고,
+        2. 그 철학자의 오른쪽 철학자도 밥 먹고 있지 않으며, (thinking 상태이므로 만족)
+        3. 그 철학자가 hugry 상태일 때 권한이 주어진다.
+            - 왼쪽 철학자가 잠든 상태라면 `signal 연산`을 하여 깨워준다.
+4. think();
 
 ### dining-philosophers problem
